# invoiceapp

./: .editorconfig  .git-blame-ignore-revs  .gitignore  README.org  app.py  payments.py  pyproject.toml  requirements.txt
invoiceapp/: app.py  custom_wkhtmltopdf.py  invoice.py  payments.py  settings.py  wsgi.py
invoiceapp/templates/: base.html  error.html  receipt.html
templates/: base.html  error.html  index.html  receipt.html
tests/: conftest.py  test_payments.py  utils.py
